<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User registration"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="30sp"
            />
        <EditText
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:hint="@string/enter_email"
            />
        <EditText
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/enter_password"
            />
        <Button
            android:layout_margin="10dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSingIn"
            android:text="@string/sign_in_here"
            android:gravity="center"
            />
    </LinearLayout>


</RelativeLayout>
